0-bak/ingress-route-cql.yaml

apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: cassandra-cql
  namespace: k8ssandra-operator
spec:
  entryPoints:
    - websecure
  tls: 
    secretName: tls-cql.cassandra.env0.luojm.com
  routes:
    - match: Host(`cql.cassandra.env0.luojm.com`) 
      kind: Rule
      services:
      - name: cassandra-cluster-env0-dc1-stargate-service 
        kind: Service
        namespace: k8ssandra-operator
        port: 9042
